--- a/style.css
+++ b/style.css
@@ -1,93 +1,174 @@
 * {
 
-padding: 0;
-margin: 0;
-
-}
-
-body {
-    transition: 0.5s;
-}
-
-body.dark{
-    background-color: #161616;
-    color: white;
-}
-
-h1 {
-
-    display: flexbox;
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 30px;
-    padding-top: 30px;
-    color: white;
-}
-
-h2 {
-
-    display: flexbox;
-    text-align: center;
-
-}
-
-header {
-
-    background-color: black;
-
-}
-
-.trilho {
-    width: 70px;
-    height: 35px;
-    background-color: #707070;
-    position: relative;
-}
-
-.trilho .indicador {
-    width: 35px;
-    height: 35px;
-    background-color: #000000;
-    transform: scale(.9);
-    cursor: pointer;
-    position: absolute;
-    left: 0;
-    transition: 0.5s;
-}
-
-#tema {
     padding: 0;
-    display: flex;
-    justify-content: end;
-}
-
-.trilho.dark {
-    background-color: lightgray;
-}
-
-.trilho.dark .indicador {
-    left: 35px;
-    background-color: #fff;
+    margin: 0;
     
-}
-
-#palestrantes {
-
-    display: flex;
-    justify-content: space-between;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-right: 10px;
-    margin-left: 10px;
-    border-style: ridge;
-    border-radius: 10px;
-}
-
-form {
+    }
     
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-style: solid;
-}
+    body {
+        transition: 0.5s;
+    }
+    
+    body.dark{
+        background-color: #161616;
+        color: white;
+    }
+    
+    h1 {
+    
+        display: flexbox;
+        text-align: center;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        padding: 30px;
+        padding-top: 30px;
+        color: white;
+    }
+    
+    h2 {
+    
+        display: flexbox;
+        text-align: center;
+    
+    }
+    
+    header {
+    
+        background-color: black;
+    
+    }
+    
+    .trilho {
+        width: 70px;
+        height: 35px;
+        background-color: #707070;
+        position: relative;
+    }
+    
+    .trilho .indicador {
+        width: 35px;
+        height: 35px;
+        background-color: #000000;
+        transform: scale(.9);
+        cursor: pointer;
+        position: absolute;
+        left: 0;
+        transition: 0.5s;
+    }
+    
+    #tema {
+        padding: 0;
+        display: flex;
+        justify-content: end;
+    }
+    
+    .trilho.dark {
+        background-color: lightgray;
+    }
+    
+    .trilho.dark .indicador {
+        left: 35px;
+        background-color: #fff;
+        
+    }
+    
+    #palestrantes {
+    
+        display: flex;
+        justify-content: space-between;
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        margin-right: 10px;
+        margin-left: 10px;
+        border-style: ridge;
+        border-radius: 10px;
+    }
+    
+
+    
+    form {
+        
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-style: solid;
+    }
+
+   
+    
+    .ogro {
+        display: flex;
+        justify-content: center;
+        width: 250px;
+        height: 250px;
+        position: relative;
+        background-color: #fff;
+        border-radius: 20px;
+        box-shadow: 0px 35px 80px rgba(0, 0, 0, 0.15);
+        transition: 0.5s;
+    }
+    
+    .ogro:hover {
+        height: 300px;
+    }
+
+
+    .ogro .img-ogro {
+        position: absolute;
+        width: 150px;
+        height: auto;
+        top: 5px;
+        transition: 0.5s;
+    }
+    
+    .ogro:hover .img-ogro {
+        top: -100px;
+        scale: 0.75;
+    }
+    
+    .ogro .img-ogro img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .ogro .info-ogro {
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
+        position: absolute;
+        top: 250px;
+        width: 100%;
+        padding: 0px 30px;
+        text-align: center;
+        height: 30px;
+        overflow: hidden;
+        transition: 0.5s;
+    }
+    
+    .ogro:hover .info-ogro {
+        top: 130px;
+        height: 150px;
+    }
+    
+    .ogro {
+       background: linear-gradient(90deg, #3730a3, #7e22ce);
+       padding: 12px;
+       color: #fff;
+       text-decoration: none;
+       border-radius: 8px;
+    }
+
+    #formulario{
+        margin-top: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 100px;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
