--- a/style.css
+++ b/style.css
@@ -5,15 +5,6 @@
     
     }
     
-    body {
-        transition: 0.5s;
-    }
-    
-    body.dark{
-        background-color: #161616;
-        color: white;
-    }
-    
     h1 {
     
         display: flexbox;
@@ -37,42 +28,8 @@
     
     }
     
-    .trilho {
-        width: 70px;
-        height: 35px;
-        background-color: #707070;
-        position: relative;
-    }
-    
-    .trilho .indicador {
-        width: 35px;
-        height: 35px;
-        background-color: #000000;
-        transform: scale(.9);
-        cursor: pointer;
-        position: absolute;
-        left: 0;
-        transition: 0.5s;
-    }
-    
-    #tema {
-        padding: 0;
-        display: flex;
-        justify-content: end;
-    }
-    
-    .trilho.dark {
-        background-color: lightgray;
-    }
-    
-    .trilho.dark .indicador {
-        left: 35px;
-        background-color: #fff;
-        
-    }
-    
     #palestrantes {
-    
+        margin-top: 50px;
         display: flex;
         justify-content: space-between;
         padding-left: 40px;
@@ -83,9 +40,9 @@
         margin-left: 10px;
         border-style: ridge;
         border-radius: 10px;
+        width: 90%;
+        height: 48vh;
     }
-    
-
     
     form {
         
@@ -94,28 +51,22 @@
         border-style: solid;
     }
 
-   
-    
     .ogro {
         display: flex;
         justify-content: center;
-        width: 250px;
-        height: 250px;
+        width: 20%;
+        height: auto;
         position: relative;
         background-color: #fff;
         border-radius: 20px;
         box-shadow: 0px 35px 80px rgba(0, 0, 0, 0.15);
         transition: 0.5s;
     }
-    
-    .ogro:hover {
-        height: 300px;
-    }
 
 
     .ogro .img-ogro {
         position: absolute;
-        width: 150px;
+        width: 60%;
         height: auto;
         top: 5px;
         transition: 0.5s;
@@ -152,7 +103,7 @@
     }
     
     .ogro {
-       background: linear-gradient(90deg, #3730a3, #7e22ce);
+       background: linear-gradient(180deg, black, rgb(100, 100, 100));
        padding: 12px;
        color: #fff;
        text-decoration: none;
@@ -171,4 +122,9 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        border-radius: 10px;
+    }
+
+    input{
+        border-radius: 5px;
     }
