--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
+
 * {
 
     padding: 0;
     margin: 0;
+    font-family: 'Winky Sans', sans-serif;
+    color: white;
     
+    }
+    
+    body {
+        background: radial-gradient(#0F0A06, #181008, #0F0A06);
+        transition: 0.5s;
+    }
+    
+    body.dark{
+        background-color: #161616;
+        color: white;
     }
     
     h1 {
@@ -12,7 +26,7 @@
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         padding: 30px;
         padding-top: 30px;
-        color: white;
+        color: black;
     }
     
     h2 {
@@ -21,15 +35,33 @@
         text-align: center;
     
     }
-    
-    header {
-    
-        background-color: black;
-    
+
+    #quando {
+    margin-left: 50vh;
+
+    }
+
+   #informacoes h3 {
+
+        margin-left: 5vh;
+        font-size: 50px;
+
     }
     
+    header {
+
+        background-color: #b76501;
+        border-bottom: solid;
+        border-color: #c9822c;
+       
+    
+    }
+
+
+    
     #palestrantes {
-        margin-top: 50px;
+    
+        background-color: black;
         display: flex;
         justify-content: space-between;
         padding-left: 40px;
@@ -38,35 +70,34 @@
         padding-bottom: 20px;
         margin-right: 10px;
         margin-left: 10px;
+        margin-bottom: 100px;
         border-style: ridge;
         border-radius: 10px;
-        width: 90%;
-        height: 48vh;
-    }
-    
-    form {
-        
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-style: solid;
+        border-color: #c9822c;
     }
 
+   
+    
     .ogro {
         display: flex;
         justify-content: center;
-        width: 20%;
-        height: auto;
+        width: 250px;
+        height: 250px;
         position: relative;
         background-color: #fff;
         border-radius: 20px;
         box-shadow: 0px 35px 80px rgba(0, 0, 0, 0.15);
         transition: 0.5s;
     }
+    
+    .ogro:hover {
+        height: 300px;
+    }
 
 
     .ogro .img-ogro {
         position: absolute;
-        width: 60%;
+        width: 150px;
         height: auto;
         top: 5px;
         transition: 0.5s;
@@ -103,28 +134,47 @@
     }
     
     .ogro {
-       background: linear-gradient(180deg, black, rgb(100, 100, 100));
+       background: linear-gradient(#73450C, #C9822C, #160E07);
        padding: 12px;
        color: #fff;
        text-decoration: none;
        border-radius: 8px;
     }
 
-    #formulario{
-        margin-top: 100px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 100px;
-    }
-    form{
+
+    form {
+        padding: 160px;
+        border-radius: 10px;
+        border-style: solid;
+        border-color: #c9822c;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
         justify-content: center;
-        border-radius: 10px;
     }
 
-    input{
-        border-radius: 5px;
+    button {
+
+        font-size: 1em;
+        display: flexbox;
+        width: 100px;
+        height: 50px;
+        background-color: #c9822c;
+        border-radius: 10px;
+        transition: 1.5s;
+
+    }
+
+    button:hover {
+
+        background: linear-gradient(#c9822c, black);
+
+    }
+
+    #formulario{
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 10px;
     }
