--- a/style.css
+++ b/style.css
@@ -16,11 +16,6 @@
         transition: 0.5s;
     }
     
-    body.dark{
-        background-color: #161616;
-        color: white;
-    }
-    
     
     h2 {
     
@@ -92,6 +87,8 @@
         border-style: ridge;
         border-radius: 10px;
         border-color: #c9822c;
+        width: 90%;
+        height: 50vh;
     }
 
    
@@ -99,24 +96,20 @@
     .ogro {
         display: flex;
         justify-content: center;
-        width: 250px;
-        height: 250px;
+        width: 20%;
+        height: 70%px;
         position: relative;
         background-color: #fff;
         border-radius: 20px;
         box-shadow: 0px 35px 80px rgba(0, 0, 0, 0.15);
         transition: 0.5s;
     }
-    
-    .ogro:hover {
-        height: 300px;
-    }
 
 
     .ogro .img-ogro {
         position: absolute;
-        width: 150px;
-        height: auto;
+        width: 60%;
+        height: 70%;
         top: 5px;
         transition: 0.5s;
     }
